--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-typescript-path-resolver",
-  "version": "0.0.1-b",
+  "version": "0.0.1-c",
   "description": "",
   "main": "dest/index.js",
   "scripts": {
